--- a/features/browser/ui/src/main/res/menu/menu_browser.xml
+++ b/features/browser/ui/src/main/res/menu/menu_browser.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_nav_settings"
+        android:title="@string/title_action_nav_settings"
+        android:contentDescription="Settings"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_nav_search"
         android:title="@string/title_action_nav_search"
         android:icon="@drawable/baseline_search_24"
